# AVP-Py

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
avppy/: app.py  cec.py  config.py  logging_setup.py  media.py  network.py  player.py  scheduler.py  sync.py
avppy/static/: app.css
avppy/templates/: admin.html  base.html  display.html  folders.html  home.html  login.html  logs.html  media_manager.html  network.html  schedule.html  settings.html  wifi_setup.html
docs/: ADMIN.md  ECRAN.md  FAQ.md  HORAIRES.md  INSTALL_RPI.md  LOCAL_DEV.md  MODE_LOCAL.md  NOUVEAU_RESEAU.md  PREMIERS_PAS.md  RCLONE.md  README.md  RESEAU.md  UPDATE.md
scripts/: install.sh  update.sh
systemd/: avp-py.service
