[project]
name = "avp-py"
version = "0.1.0"
description = "Autonomous video player for Raspberry Pi digital signage"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "jinja2==3.1.4",
  "python-multipart==0.0.19",
]

[tool.ruff]
line-length = 100
target-version = "py311"

